# jetson-realtime-object-detection

./: .gitignore  LICENSE  README.md  download_weights.sh  install_dependencies.sh  requirements.txt
camera_detection/: detection.py  nvgst_capture_detect.sh  nvgst_realtime_detect.sh
camera_detection/camera/utils/: __init__.py  drawing.py  model_loader.py
configs/dfine/: dfine_hgnetv2_n_coco.yml
tools/benchmark/: dataset.py  get_info.py  trt_benchmark.py  utils.py
tools/dataset/: remap_obj365.py  resize_obj365.py
tools/deployment/: export_onnx.py  export_yolo_w_nms.py
tools/inference/: onnx_inf.py  openvino_inf.py  requirements.txt  torch_inf.py  trt_inf.py
tools/inference/cppExample/onnx/: CMakeLists.txt  onnxExample.cpp
tools/inference/cppExample/openvino/: CMakeLists.txt  openvinoExample.cpp
tools/inference/cppExample/trt/: CMakeLists.txt  trtExample.cpp
tools/visualization/: fiftyone_vis.py
